[package]
name = "dns-mock-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.74"
tokio = { version = "1.34.0", features = ["net"] }
hickory-server = { version = "0.24.0", features = ["tokio-rustls"] }

[dev-dependencies]
tokio = { version = "1.34.0", features = ["macros", "rt"] }
hickory-resolver = { version = "0.24.0", features = ["tokio-rustls"] }
