[package]
name = "dns-mock-server"
version = "0.1.5"
edition = "2021"
description = "Mock DNS server for tests"
license = "MIT OR Apache-2.0"
keywords = ["dns", "mock", "test"]
readme = "README.md"
repository = "https://github.com/alexander-jackson/dns-mock-server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.81"
tokio = { version = "1.38.0", features = ["net"] }
hickory-server = { version = "0.24.1", features = ["tokio-rustls"] }

[dev-dependencies]
tokio = { version = "1.38.0", features = ["macros", "rt"] }
hickory-resolver = { version = "0.24.1", features = ["tokio-rustls"] }
